--- a/app/src/main/res/values-pt-rBR/strings.xml
+++ b/app/src/main/res/values-pt-rBR/strings.xml
@@ -438,6 +438,6 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="share_into_format">Compartilhar em - Formato</string>
     <string name="auto_format">Auto-formatar</string>
     <string name="insert_snippet">Insert snippet</string>
-    <string name="document_error">Erro: Não foi possível abrir.</string>
+    <string name="error_could_not_open_file">Erro: Não foi possível abrir.</string>
     <string name="document_error_clip">Erro encontrado: Texto copiado para área de transferência.</string>
 </resources>
