--- a/app/src/main/res/values-in/strings.xml
+++ b/app/src/main/res/values-in/strings.xml
@@ -10,7 +10,7 @@ You should have received a copy of the CC0 legalcode along with this
 work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
 -->
 <resources xmlns:tools="http://schemas.android.com/tools">
-    <string name="settings">Setelan</string>
+    <string name="settings">Preferensi</string>
     <string name="light">Terang</string>
     <string name="dark">Gelap</string>
     <string name="delete">Hapus</string>
