--- a/app/src/main/res/values-pt-rBR/strings.xml
+++ b/app/src/main/res/values-pt-rBR/strings.xml
@@ -74,10 +74,10 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="save_location">Salvar localização</string>
     <string name="select_storage_folder">Escolher pasta de armazenamento</string>
     <string name="licenses">Licenças</string>
-    <string name="changelog">Histórico de atualizações</string>
+    <string name="changelog">Histórico de mudanças</string>
     <string name="more_info">Mais informações</string>
     <string name="show_license_of_the_app">Exibir licença</string>
-    <string name="show_third_party_licenses">Ver licenças de terceiros</string>
+    <string name="show_third_party_licenses">Exibir licenças de terceiros</string>
     <string name="language_change_restart_description">Alterar o idioma deste aplicativo. Reinicie o aplicativo para as mudanças terem efeito</string>
     <string name="language">Idioma</string>
     <string name="error_need_storage_permission_to_save_documents">Para salvar documentos é necessário ter permissão de acesso ao armazenamento</string>
@@ -288,7 +288,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="appdata_private">Dados do aplicativo (privado)</string>
     <string name="appdata_sdcard">Dados do aplicativo (cartão SD)</string>
     <string name="internal_storage">Armazenamento interno</string>
-    <string name="open_the_document_from_main_view">Você pode abrir o documento na parte inferior da tela principal, pelo gerenciador de arquivos ou no launcher. Há também a opção de anexar texto compartilhado pra dentro do Markor.</string>
+    <string name="open_the_document_from_main_view">Você pode abrir o documento na parte inferior da tela principal, pelo gerenciador de arquivos ou no launcher. Há também a opção de anexar texto compartilhado para dentro do Markor.</string>
     <string name="notebook_is_the_home_of_your_files">Notebook é a pasta que o Markor abre através do gerenciador de arquivos quando o app é iniciado. É a pasta padrão dos seus arquivos.</string>
     <string name="quicknote_is_the_fastest_option_to_write_down_notes">QuickNote é a opção mais rápida para suas anotações. Ele é um arquivo de formato Markdown e sua localização padrão é &gt;Notebook/QuickNote.md&lt;, e você pode customizar a localização nas configurações.</string>
     <string name="todo_is_the_easiest_way_">Gerencie suas tarefas com ToDo. É um arquivo todo.txt com localização padrão &gt;Notebook/todo.txt&lt;, e que pode ter sua localização customizada nas configurações.</string>
@@ -406,7 +406,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="ignore_list">Lista de Ignorados</string>
     <string name="do_not_search_specified_files_and_folders">Não procure por arquivos e pastas especificadas.\nUse nova linha como separador.\nUse aspas para nomes exatamente diretórios: \"Testar\".\nOu use Regex \'^[.].*\'\nExemplos: ├..*\n\"teste\"\n\"Test\"\n.*secret.*\n.*BACKUP.*\n.*.ini</string>
     <string name="regex_search">Busca por Regex</string>
-    <string name="case_sensitive">Sensível ao caso</string>
+    <string name="case_sensitive">Considerar maiúsculo e minúsculo</string>
     <string name="stop_search_after_first_match">Parar pesquisa após primeira correspondência</string>
     <string name="regex_can_not_be_compiled">Regex não pode ser compilado</string>
     <string name="keep_both">Manter ambos</string>
@@ -422,7 +422,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="browse_by_project">Navegar por projeto</string>
     <string name="browse_by_context">Procurar por contexto</string>
     <string name="insert_project">Inserir projetos</string>
-    <string name="insert_context">Insert contexts</string>
+    <string name="insert_context">Inserir contexto</string>
     <string name="browse_todo">Procurar tarefa</string>
     <string name="browse_by_priority">Navegar por prioridade</string>
     <string name="browse_by_due_date">Procurar por data de vencimento</string>
@@ -438,6 +438,5 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="share_into_format">Compartilhar em - Formato</string>
     <string name="auto_format">Auto-formatar</string>
     <string name="insert_snippet">Insert snippet</string>
-    <string name="document_error_exit">Erro: Não foi possível abrir.</string>
     <string name="document_error_clip">Erro encontrado: Texto copiado para área de transferência.</string>
 </resources>
