[ci skip] Update translations (Hungarian)

--- a/app/src/main/res/values-hu/strings.xml
+++ b/app/src/main/res/values-hu/strings.xml
@@ -215,7 +215,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="help_translating_this_app">Fordítsd le az alkalmazást más nyelvekre</string>
     <string name="source_code">Forráskód</string>
     <string name="project_license">Projekt licensz</string>
-    <string name="contribute_code_to_this_project_anybody_welcome">Járulj hozzá kóddal a projekthez! Mindenkit szívesen látunk, az újonnan jövőket is.</string>
+    <string name="contribute_code_to_this_project_anybody_welcome">Adja meg a kódot a projekthez. Mindenkit szívesen látunk, az újonnan jövőket is beleértve.</string>
     <string name="project_team">Projekt csapat</string>
     <string name="contributors_public_add_yourself_description">A közreműködő információk megjelenítése. Add meg, hogy megjelenjen a közreműködés után, egy beleegyezés alapú módon.</string>
     <string name="descending">csökkenő</string>
